Lab_5/y.output
State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: %empty
    3                | declaration declarationList

    4 declaration: varDeclaration
    5            | funDeclaration

    6 varDeclaration: typeSpecifier varList ';'

    7 varList: ID
    8        | ID '[' NUM ']'
    9        | ID ',' varList
   10        | ID '[' NUM ']' ',' varList

   11 typeSpecifier: INT
   12              | VOID
   13              | BOOL

   14 funDeclaration: typeSpecifier ID '(' params ')' compoundStatement

   15 params: VOID
   16       | paramsList

   17 paramsList: %empty
   18           | param ',' paramsList
   19           | param

   20 param: typeSpecifier ID '[' ']'
   21      | typeSpecifier ID

   22 compoundStatement: MYBEGIN localDeclarations statementList END

   23 localDeclarations: %empty
   24                  | varDeclaration localDeclarations

   25 statementList: %empty
   26              | statement

   27 statement: expressionStatement
   28          | compoundStatement
   29          | selectionStatement
   30          | iterationStatement
   31          | assignmentStatement
   32          | returnStatement
   33          | readStatement
   34          | writeStatment

   35 expressionStatement: expression ';'
   36                    | ';'

   37 selectionStatement: IF expression THEN statement
   38                   | IF expression THEN statement ELSE statement

   39 iterationStatement: WHILE expression DO statement

   40 assignmentStatement: var '=' expression ';'

   41 returnStatement: MYRETURN expression ';'
   42                | MYRETURN ';'

   43 readStatement: READ ID ';'

   44 writeStatment: WRITE expression ';'

   45 expression: simpleExpression

   46 var: ID '[' expression ']'
   47    | ID '[' ']'

   48 simpleExpression: additiveExpression relop additiveExpression
   49                 | additiveExpression

   50 relop: LE
   51      | LT
   52      | GT
   53      | GE
   54      | EQ
   55      | NE

   56 additiveExpression: term zomAOT

   57 zomAOT: %empty
   58       | addop term zomAOT

   59 addop: '+'
   60      | '-'

   61 term: factor zomMF

   62 zomMF: %empty
   63      | multop factor zomMF

   64 multop: '*'
   65       | '/'
   66       | AND
   67       | OR

   68 factor: '(' expression ')'
   69       | NUM
   70       | var
   71       | call
   72       | TRUE
   73       | FALSE
   74       | NOT factor

   75 call: ID '(' args ')'

   76 args: %empty
   77     | argsList

   78 argsList: expression ',' expression
   79         | expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 68 75
')' (41) 14 68 75
'*' (42) 64
'+' (43) 59
',' (44) 9 10 18 78
'-' (45) 60
'/' (47) 65
';' (59) 6 35 36 40 41 42 43 44
'=' (61) 40
'[' (91) 8 10 20 46 47
']' (93) 8 10 20 46 47
error (256)
INT (258) 11
AND (259) 66
OR (260) 67
VOID (261) 12 15
BOOL (262) 13
TRUE (263) 72
FALSE (264) 73
NOT (265) 74
IF (266) 37 38
THEN (267) 37 38
ELSE (268) 38
READ (269) 43
WRITE (270) 44
MYRETURN (271) 41 42
WHILE (272) 39
DO (273) 39
LT (274) 51
GT (275) 52
LE (276) 50
GE (277) 53
EQ (278) 54
NE (279) 55
MYBEGIN (280) 22
END (281) 22
NUM (282) 8 10 69
ID (283) 7 8 9 10 14 20 21 43 46 47 75


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program (41)
    on left: 1, on right: 0
declarationList (42)
    on left: 2 3, on right: 1 3
declaration (43)
    on left: 4 5, on right: 3
varDeclaration (44)
    on left: 6, on right: 4 24
varList (45)
    on left: 7 8 9 10, on right: 6 9 10
typeSpecifier (46)
    on left: 11 12 13, on right: 6 14 20 21
funDeclaration (47)
    on left: 14, on right: 5
params (48)
    on left: 15 16, on right: 14
paramsList (49)
    on left: 17 18 19, on right: 16 18
param (50)
    on left: 20 21, on right: 18 19
compoundStatement (51)
    on left: 22, on right: 14 28
localDeclarations (52)
    on left: 23 24, on right: 22 24
statementList (53)
    on left: 25 26, on right: 22
statement (54)
    on left: 27 28 29 30 31 32 33 34, on right: 26 37 38 39
expressionStatement (55)
    on left: 35 36, on right: 27
selectionStatement (56)
    on left: 37 38, on right: 29
iterationStatement (57)
    on left: 39, on right: 30
assignmentStatement (58)
    on left: 40, on right: 31
returnStatement (59)
    on left: 41 42, on right: 32
readStatement (60)
    on left: 43, on right: 33
writeStatment (61)
    on left: 44, on right: 34
expression (62)
    on left: 45, on right: 35 37 38 39 40 41 44 46 68 78 79
var (63)
    on left: 46 47, on right: 40 70
simpleExpression (64)
    on left: 48 49, on right: 45
relop (65)
    on left: 50 51 52 53 54 55, on right: 48
additiveExpression (66)
    on left: 56, on right: 48 49
zomAOT (67)
    on left: 57 58, on right: 56 58
addop (68)
    on left: 59 60, on right: 58
term (69)
    on left: 61, on right: 56 58
zomMF (70)
    on left: 62 63, on right: 61 63
multop (71)
    on left: 64 65 66 67, on right: 63
factor (72)
    on left: 68 69 70 71 72 73 74, on right: 61 63 74
call (73)
    on left: 75, on right: 71
args (74)
    on left: 76 77, on right: 75
argsList (75)
    on left: 78 79, on right: 77


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    BOOL  shift, and go to state 3

    $default  reduce using rule 2 (declarationList)

    program          go to state 4
    declarationList  go to state 5
    declaration      go to state 6
    varDeclaration   go to state 7
    typeSpecifier    go to state 8
    funDeclaration   go to state 9


State 1

   11 typeSpecifier: INT .

    $default  reduce using rule 11 (typeSpecifier)


State 2

   12 typeSpecifier: VOID .

    $default  reduce using rule 12 (typeSpecifier)


State 3

   13 typeSpecifier: BOOL .

    $default  reduce using rule 13 (typeSpecifier)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 10


State 5

    1 program: declarationList .

    $default  reduce using rule 1 (program)


State 6

    3 declarationList: declaration . declarationList

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    BOOL  shift, and go to state 3

    $default  reduce using rule 2 (declarationList)

    declarationList  go to state 11
    declaration      go to state 6
    varDeclaration   go to state 7
    typeSpecifier    go to state 8
    funDeclaration   go to state 9


State 7

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


State 8

    6 varDeclaration: typeSpecifier . varList ';'
   14 funDeclaration: typeSpecifier . ID '(' params ')' compoundStatement

    ID  shift, and go to state 12

    varList  go to state 13


State 9

    5 declaration: funDeclaration .

    $default  reduce using rule 5 (declaration)


State 10

    0 $accept: program $end .

    $default  accept


State 11

    3 declarationList: declaration declarationList .

    $default  reduce using rule 3 (declarationList)


State 12

    7 varList: ID .
    8        | ID . '[' NUM ']'
    9        | ID . ',' varList
   10        | ID . '[' NUM ']' ',' varList
   14 funDeclaration: typeSpecifier ID . '(' params ')' compoundStatement

    '['  shift, and go to state 14
    ','  shift, and go to state 15
    '('  shift, and go to state 16

    $default  reduce using rule 7 (varList)


State 13

    6 varDeclaration: typeSpecifier varList . ';'

    ';'  shift, and go to state 17


State 14

    8 varList: ID '[' . NUM ']'
   10        | ID '[' . NUM ']' ',' varList

    NUM  shift, and go to state 18


State 15

    9 varList: ID ',' . varList

    ID  shift, and go to state 19

    varList  go to state 20


State 16

   14 funDeclaration: typeSpecifier ID '(' . params ')' compoundStatement

    INT   shift, and go to state 1
    VOID  shift, and go to state 21
    BOOL  shift, and go to state 3

    $default  reduce using rule 17 (paramsList)

    typeSpecifier  go to state 22
    params         go to state 23
    paramsList     go to state 24
    param          go to state 25


State 17

    6 varDeclaration: typeSpecifier varList ';' .

    $default  reduce using rule 6 (varDeclaration)


State 18

    8 varList: ID '[' NUM . ']'
   10        | ID '[' NUM . ']' ',' varList

    ']'  shift, and go to state 26


State 19

    7 varList: ID .
    8        | ID . '[' NUM ']'
    9        | ID . ',' varList
   10        | ID . '[' NUM ']' ',' varList

    '['  shift, and go to state 14
    ','  shift, and go to state 15

    $default  reduce using rule 7 (varList)


State 20

    9 varList: ID ',' varList .

    $default  reduce using rule 9 (varList)


State 21

   12 typeSpecifier: VOID .
   15 params: VOID .

    ')'       reduce using rule 15 (params)
    $default  reduce using rule 12 (typeSpecifier)


State 22

   20 param: typeSpecifier . ID '[' ']'
   21      | typeSpecifier . ID

    ID  shift, and go to state 27


State 23

   14 funDeclaration: typeSpecifier ID '(' params . ')' compoundStatement

    ')'  shift, and go to state 28


State 24

   16 params: paramsList .

    $default  reduce using rule 16 (params)


State 25

   18 paramsList: param . ',' paramsList
   19           | param .

    ','  shift, and go to state 29

    $default  reduce using rule 19 (paramsList)


State 26

    8 varList: ID '[' NUM ']' .
   10        | ID '[' NUM ']' . ',' varList

    ','  shift, and go to state 30

    $default  reduce using rule 8 (varList)


State 27

   20 param: typeSpecifier ID . '[' ']'
   21      | typeSpecifier ID .

    '['  shift, and go to state 31

    $default  reduce using rule 21 (param)


State 28

   14 funDeclaration: typeSpecifier ID '(' params ')' . compoundStatement

    MYBEGIN  shift, and go to state 32

    compoundStatement  go to state 33


State 29

   18 paramsList: param ',' . paramsList

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    BOOL  shift, and go to state 3

    $default  reduce using rule 17 (paramsList)

    typeSpecifier  go to state 22
    paramsList     go to state 34
    param          go to state 25


State 30

   10 varList: ID '[' NUM ']' ',' . varList

    ID  shift, and go to state 19

    varList  go to state 35


State 31

   20 param: typeSpecifier ID '[' . ']'

    ']'  shift, and go to state 36


State 32

   22 compoundStatement: MYBEGIN . localDeclarations statementList END

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    BOOL  shift, and go to state 3

    $default  reduce using rule 23 (localDeclarations)

    varDeclaration     go to state 37
    typeSpecifier      go to state 38
    localDeclarations  go to state 39


State 33

   14 funDeclaration: typeSpecifier ID '(' params ')' compoundStatement .

    $default  reduce using rule 14 (funDeclaration)


State 34

   18 paramsList: param ',' paramsList .

    $default  reduce using rule 18 (paramsList)


State 35

   10 varList: ID '[' NUM ']' ',' varList .

    $default  reduce using rule 10 (varList)


State 36

   20 param: typeSpecifier ID '[' ']' .

    $default  reduce using rule 20 (param)


State 37

   24 localDeclarations: varDeclaration . localDeclarations

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    BOOL  shift, and go to state 3

    $default  reduce using rule 23 (localDeclarations)

    varDeclaration     go to state 37
    typeSpecifier      go to state 38
    localDeclarations  go to state 40


State 38

    6 varDeclaration: typeSpecifier . varList ';'

    ID  shift, and go to state 19

    varList  go to state 13


State 39

   22 compoundStatement: MYBEGIN localDeclarations . statementList END

    TRUE      shift, and go to state 41
    FALSE     shift, and go to state 42
    NOT       shift, and go to state 43
    IF        shift, and go to state 44
    READ      shift, and go to state 45
    WRITE     shift, and go to state 46
    MYRETURN  shift, and go to state 47
    WHILE     shift, and go to state 48
    MYBEGIN   shift, and go to state 32
    NUM       shift, and go to state 49
    ID        shift, and go to state 50
    ';'       shift, and go to state 51
    '('       shift, and go to state 52

    $default  reduce using rule 25 (statementList)

    compoundStatement    go to state 53
    statementList        go to state 54
    statement            go to state 55
    expressionStatement  go to state 56
    selectionStatement   go to state 57
    iterationStatement   go to state 58
    assignmentStatement  go to state 59
    returnStatement      go to state 60
    readStatement        go to state 61
    writeStatment        go to state 62
    expression           go to state 63
    var                  go to state 64
    simpleExpression     go to state 65
    additiveExpression   go to state 66
    term                 go to state 67
    factor               go to state 68
    call                 go to state 69


State 40

   24 localDeclarations: varDeclaration localDeclarations .

    $default  reduce using rule 24 (localDeclarations)


State 41

   72 factor: TRUE .

    $default  reduce using rule 72 (factor)


State 42

   73 factor: FALSE .

    $default  reduce using rule 73 (factor)


State 43

   74 factor: NOT . factor

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    var     go to state 70
    factor  go to state 71
    call    go to state 69


State 44

   37 selectionStatement: IF . expression THEN statement
   38                   | IF . expression THEN statement ELSE statement

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    expression          go to state 72
    var                 go to state 70
    simpleExpression    go to state 65
    additiveExpression  go to state 66
    term                go to state 67
    factor              go to state 68
    call                go to state 69


State 45

   43 readStatement: READ . ID ';'

    ID  shift, and go to state 73


State 46

   44 writeStatment: WRITE . expression ';'

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    expression          go to state 74
    var                 go to state 70
    simpleExpression    go to state 65
    additiveExpression  go to state 66
    term                go to state 67
    factor              go to state 68
    call                go to state 69


State 47

   41 returnStatement: MYRETURN . expression ';'
   42                | MYRETURN . ';'

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    ';'    shift, and go to state 75
    '('    shift, and go to state 52

    expression          go to state 76
    var                 go to state 70
    simpleExpression    go to state 65
    additiveExpression  go to state 66
    term                go to state 67
    factor              go to state 68
    call                go to state 69


State 48

   39 iterationStatement: WHILE . expression DO statement

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    expression          go to state 77
    var                 go to state 70
    simpleExpression    go to state 65
    additiveExpression  go to state 66
    term                go to state 67
    factor              go to state 68
    call                go to state 69


State 49

   69 factor: NUM .

    $default  reduce using rule 69 (factor)


State 50

   46 var: ID . '[' expression ']'
   47    | ID . '[' ']'
   75 call: ID . '(' args ')'

    '['  shift, and go to state 78
    '('  shift, and go to state 79


State 51

   36 expressionStatement: ';' .

    $default  reduce using rule 36 (expressionStatement)


State 52

   68 factor: '(' . expression ')'

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    expression          go to state 80
    var                 go to state 70
    simpleExpression    go to state 65
    additiveExpression  go to state 66
    term                go to state 67
    factor              go to state 68
    call                go to state 69


State 53

   28 statement: compoundStatement .

    $default  reduce using rule 28 (statement)


State 54

   22 compoundStatement: MYBEGIN localDeclarations statementList . END

    END  shift, and go to state 81


State 55

   26 statementList: statement .

    $default  reduce using rule 26 (statementList)


State 56

   27 statement: expressionStatement .

    $default  reduce using rule 27 (statement)


State 57

   29 statement: selectionStatement .

    $default  reduce using rule 29 (statement)


State 58

   30 statement: iterationStatement .

    $default  reduce using rule 30 (statement)


State 59

   31 statement: assignmentStatement .

    $default  reduce using rule 31 (statement)


State 60

   32 statement: returnStatement .

    $default  reduce using rule 32 (statement)


State 61

   33 statement: readStatement .

    $default  reduce using rule 33 (statement)


State 62

   34 statement: writeStatment .

    $default  reduce using rule 34 (statement)


State 63

   35 expressionStatement: expression . ';'

    ';'  shift, and go to state 82


State 64

   40 assignmentStatement: var . '=' expression ';'
   70 factor: var .

    '='  shift, and go to state 83

    $default  reduce using rule 70 (factor)


State 65

   45 expression: simpleExpression .

    $default  reduce using rule 45 (expression)


State 66

   48 simpleExpression: additiveExpression . relop additiveExpression
   49                 | additiveExpression .

    LT  shift, and go to state 84
    GT  shift, and go to state 85
    LE  shift, and go to state 86
    GE  shift, and go to state 87
    EQ  shift, and go to state 88
    NE  shift, and go to state 89

    $default  reduce using rule 49 (simpleExpression)

    relop  go to state 90


State 67

   56 additiveExpression: term . zomAOT

    '+'  shift, and go to state 91
    '-'  shift, and go to state 92

    $default  reduce using rule 57 (zomAOT)

    zomAOT  go to state 93
    addop   go to state 94


State 68

   61 term: factor . zomMF

    AND  shift, and go to state 95
    OR   shift, and go to state 96
    '*'  shift, and go to state 97
    '/'  shift, and go to state 98

    $default  reduce using rule 62 (zomMF)

    zomMF   go to state 99
    multop  go to state 100


State 69

   71 factor: call .

    $default  reduce using rule 71 (factor)


State 70

   70 factor: var .

    $default  reduce using rule 70 (factor)


State 71

   74 factor: NOT factor .

    $default  reduce using rule 74 (factor)


State 72

   37 selectionStatement: IF expression . THEN statement
   38                   | IF expression . THEN statement ELSE statement

    THEN  shift, and go to state 101


State 73

   43 readStatement: READ ID . ';'

    ';'  shift, and go to state 102


State 74

   44 writeStatment: WRITE expression . ';'

    ';'  shift, and go to state 103


State 75

   42 returnStatement: MYRETURN ';' .

    $default  reduce using rule 42 (returnStatement)


State 76

   41 returnStatement: MYRETURN expression . ';'

    ';'  shift, and go to state 104


State 77

   39 iterationStatement: WHILE expression . DO statement

    DO  shift, and go to state 105


State 78

   46 var: ID '[' . expression ']'
   47    | ID '[' . ']'

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    ']'    shift, and go to state 106
    '('    shift, and go to state 52

    expression          go to state 107
    var                 go to state 70
    simpleExpression    go to state 65
    additiveExpression  go to state 66
    term                go to state 67
    factor              go to state 68
    call                go to state 69


State 79

   75 call: ID '(' . args ')'

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    $default  reduce using rule 76 (args)

    expression          go to state 108
    var                 go to state 70
    simpleExpression    go to state 65
    additiveExpression  go to state 66
    term                go to state 67
    factor              go to state 68
    call                go to state 69
    args                go to state 109
    argsList            go to state 110


State 80

   68 factor: '(' expression . ')'

    ')'  shift, and go to state 111


State 81

   22 compoundStatement: MYBEGIN localDeclarations statementList END .

    $default  reduce using rule 22 (compoundStatement)


State 82

   35 expressionStatement: expression ';' .

    $default  reduce using rule 35 (expressionStatement)


State 83

   40 assignmentStatement: var '=' . expression ';'

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    expression          go to state 112
    var                 go to state 70
    simpleExpression    go to state 65
    additiveExpression  go to state 66
    term                go to state 67
    factor              go to state 68
    call                go to state 69


State 84

   51 relop: LT .

    $default  reduce using rule 51 (relop)


State 85

   52 relop: GT .

    $default  reduce using rule 52 (relop)


State 86

   50 relop: LE .

    $default  reduce using rule 50 (relop)


State 87

   53 relop: GE .

    $default  reduce using rule 53 (relop)


State 88

   54 relop: EQ .

    $default  reduce using rule 54 (relop)


State 89

   55 relop: NE .

    $default  reduce using rule 55 (relop)


State 90

   48 simpleExpression: additiveExpression relop . additiveExpression

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    var                 go to state 70
    additiveExpression  go to state 113
    term                go to state 67
    factor              go to state 68
    call                go to state 69


State 91

   59 addop: '+' .

    $default  reduce using rule 59 (addop)


State 92

   60 addop: '-' .

    $default  reduce using rule 60 (addop)


State 93

   56 additiveExpression: term zomAOT .

    $default  reduce using rule 56 (additiveExpression)


State 94

   58 zomAOT: addop . term zomAOT

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    var     go to state 70
    term    go to state 114
    factor  go to state 68
    call    go to state 69


State 95

   66 multop: AND .

    $default  reduce using rule 66 (multop)


State 96

   67 multop: OR .

    $default  reduce using rule 67 (multop)


State 97

   64 multop: '*' .

    $default  reduce using rule 64 (multop)


State 98

   65 multop: '/' .

    $default  reduce using rule 65 (multop)


State 99

   61 term: factor zomMF .

    $default  reduce using rule 61 (term)


State 100

   63 zomMF: multop . factor zomMF

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    var     go to state 70
    factor  go to state 115
    call    go to state 69


State 101

   37 selectionStatement: IF expression THEN . statement
   38                   | IF expression THEN . statement ELSE statement

    TRUE      shift, and go to state 41
    FALSE     shift, and go to state 42
    NOT       shift, and go to state 43
    IF        shift, and go to state 44
    READ      shift, and go to state 45
    WRITE     shift, and go to state 46
    MYRETURN  shift, and go to state 47
    WHILE     shift, and go to state 48
    MYBEGIN   shift, and go to state 32
    NUM       shift, and go to state 49
    ID        shift, and go to state 50
    ';'       shift, and go to state 51
    '('       shift, and go to state 52

    compoundStatement    go to state 53
    statement            go to state 116
    expressionStatement  go to state 56
    selectionStatement   go to state 57
    iterationStatement   go to state 58
    assignmentStatement  go to state 59
    returnStatement      go to state 60
    readStatement        go to state 61
    writeStatment        go to state 62
    expression           go to state 63
    var                  go to state 64
    simpleExpression     go to state 65
    additiveExpression   go to state 66
    term                 go to state 67
    factor               go to state 68
    call                 go to state 69


State 102

   43 readStatement: READ ID ';' .

    $default  reduce using rule 43 (readStatement)


State 103

   44 writeStatment: WRITE expression ';' .

    $default  reduce using rule 44 (writeStatment)


State 104

   41 returnStatement: MYRETURN expression ';' .

    $default  reduce using rule 41 (returnStatement)


State 105

   39 iterationStatement: WHILE expression DO . statement

    TRUE      shift, and go to state 41
    FALSE     shift, and go to state 42
    NOT       shift, and go to state 43
    IF        shift, and go to state 44
    READ      shift, and go to state 45
    WRITE     shift, and go to state 46
    MYRETURN  shift, and go to state 47
    WHILE     shift, and go to state 48
    MYBEGIN   shift, and go to state 32
    NUM       shift, and go to state 49
    ID        shift, and go to state 50
    ';'       shift, and go to state 51
    '('       shift, and go to state 52

    compoundStatement    go to state 53
    statement            go to state 117
    expressionStatement  go to state 56
    selectionStatement   go to state 57
    iterationStatement   go to state 58
    assignmentStatement  go to state 59
    returnStatement      go to state 60
    readStatement        go to state 61
    writeStatment        go to state 62
    expression           go to state 63
    var                  go to state 64
    simpleExpression     go to state 65
    additiveExpression   go to state 66
    term                 go to state 67
    factor               go to state 68
    call                 go to state 69


State 106

   47 var: ID '[' ']' .

    $default  reduce using rule 47 (var)


State 107

   46 var: ID '[' expression . ']'

    ']'  shift, and go to state 118


State 108

   78 argsList: expression . ',' expression
   79         | expression .

    ','  shift, and go to state 119

    $default  reduce using rule 79 (argsList)


State 109

   75 call: ID '(' args . ')'

    ')'  shift, and go to state 120


State 110

   77 args: argsList .

    $default  reduce using rule 77 (args)


State 111

   68 factor: '(' expression ')' .

    $default  reduce using rule 68 (factor)


State 112

   40 assignmentStatement: var '=' expression . ';'

    ';'  shift, and go to state 121


State 113

   48 simpleExpression: additiveExpression relop additiveExpression .

    $default  reduce using rule 48 (simpleExpression)


State 114

   58 zomAOT: addop term . zomAOT

    '+'  shift, and go to state 91
    '-'  shift, and go to state 92

    $default  reduce using rule 57 (zomAOT)

    zomAOT  go to state 122
    addop   go to state 94


State 115

   63 zomMF: multop factor . zomMF

    AND  shift, and go to state 95
    OR   shift, and go to state 96
    '*'  shift, and go to state 97
    '/'  shift, and go to state 98

    $default  reduce using rule 62 (zomMF)

    zomMF   go to state 123
    multop  go to state 100


State 116

   37 selectionStatement: IF expression THEN statement .
   38                   | IF expression THEN statement . ELSE statement

    ELSE  shift, and go to state 124

    ELSE      [reduce using rule 37 (selectionStatement)]
    $default  reduce using rule 37 (selectionStatement)


State 117

   39 iterationStatement: WHILE expression DO statement .

    $default  reduce using rule 39 (iterationStatement)


State 118

   46 var: ID '[' expression ']' .

    $default  reduce using rule 46 (var)


State 119

   78 argsList: expression ',' . expression

    TRUE   shift, and go to state 41
    FALSE  shift, and go to state 42
    NOT    shift, and go to state 43
    NUM    shift, and go to state 49
    ID     shift, and go to state 50
    '('    shift, and go to state 52

    expression          go to state 125
    var                 go to state 70
    simpleExpression    go to state 65
    additiveExpression  go to state 66
    term                go to state 67
    factor              go to state 68
    call                go to state 69


State 120

   75 call: ID '(' args ')' .

    $default  reduce using rule 75 (call)


State 121

   40 assignmentStatement: var '=' expression ';' .

    $default  reduce using rule 40 (assignmentStatement)


State 122

   58 zomAOT: addop term zomAOT .

    $default  reduce using rule 58 (zomAOT)


State 123

   63 zomMF: multop factor zomMF .

    $default  reduce using rule 63 (zomMF)


State 124

   38 selectionStatement: IF expression THEN statement ELSE . statement

    TRUE      shift, and go to state 41
    FALSE     shift, and go to state 42
    NOT       shift, and go to state 43
    IF        shift, and go to state 44
    READ      shift, and go to state 45
    WRITE     shift, and go to state 46
    MYRETURN  shift, and go to state 47
    WHILE     shift, and go to state 48
    MYBEGIN   shift, and go to state 32
    NUM       shift, and go to state 49
    ID        shift, and go to state 50
    ';'       shift, and go to state 51
    '('       shift, and go to state 52

    compoundStatement    go to state 53
    statement            go to state 126
    expressionStatement  go to state 56
    selectionStatement   go to state 57
    iterationStatement   go to state 58
    assignmentStatement  go to state 59
    returnStatement      go to state 60
    readStatement        go to state 61
    writeStatment        go to state 62
    expression           go to state 63
    var                  go to state 64
    simpleExpression     go to state 65
    additiveExpression   go to state 66
    term                 go to state 67
    factor               go to state 68
    call                 go to state 69


State 125

   78 argsList: expression ',' expression .

    $default  reduce using rule 78 (argsList)


State 126

   38 selectionStatement: IF expression THEN statement ELSE statement .

    $default  reduce using rule 38 (selectionStatement)
